# Session-Logger-for-CTFs

./: .gitignore  README.md  dump2note.py  gui.py  publish-lab-notes.sh  pyproject.toml
.github/workflows/: release.yml
examples/: multi-tool.txt  nmap-clean.txt  noisy-session.txt
notes/ml-serving/2026/: 2026-04-20.md
session-recorder/: Cargo.toml
session-recorder/src/: browser.rs  config.rs  daemon.rs  event.rs  main.rs  notes.rs  platform.rs
src/ctf_session_logger/: __init__.py
tests/: test_dump2note.py
