[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctf-session-logger"
version = "0.1.0a1"
description = "Privacy-first session logger and note generator for CTF sessions"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Session Logger contributors" }]
requires-python = ">=3.10"
keywords = ["ctf", "security", "session", "recorder", "pentest", "notes"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Utilities",
]
# No third-party runtime dependencies – stdlib only
dependencies = []

[project.urls]
Homepage = "https://github.com/CzarLeMajeste/Session-Logger-for-CTFs"
Repository = "https://github.com/CzarLeMajeste/Session-Logger-for-CTFs"
"Bug Tracker" = "https://github.com/CzarLeMajeste/Session-Logger-for-CTFs/issues"

[project.scripts]
dump2note = "ctf_session_logger.dump2note:main"
ctf-session-logger-gui = "ctf_session_logger.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
