[package]
name = "session-recorder"
version = "1.0.0"
edition = "2021"
description = "Privacy-first background session recorder for CTF sessions"
license = "MIT"

[[bin]]
name = "session-recorder"
path = "src/main.rs"

[dependencies]
clap      = { version = "4.5", features = ["derive"] }
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono    = { version = "0.4", features = ["serde"] }
dirs      = "5.0"
regex     = "1.10"
rusqlite  = { version = "0.31", features = ["bundled"] }
ctrlc     = { version = "3.4",  features = ["termination"] }
